[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/EthnicityPage/EthnicityTrait.gd" type="Script" id=1]
[ext_resource path="res://Resources/Buttons/SkillBoxbutton/SkillBoxButtonPressed.tres" type="StyleBox" id=2]
[ext_resource path="res://Resources/Buttons/SkillBoxbutton/SkillBoxButtonInactive.tres" type="StyleBox" id=3]
[ext_resource path="res://Fonts/Gruppo-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Resources/Buttons/SkillBoxbutton/SkillBoxButtonHover.tres" type="StyleBox" id=5]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFont" id=3]
size = 26
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 4 )

[node name="EthnicityTraitButton" type="Button"]
anchor_right = 0.115
anchor_bottom = 0.185
margin_right = -0.800003
margin_bottom = 0.199997
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
toggle_mode = true
script = ExtResource( 1 )

[node name="TraitNameLabel" type="RichTextLabel" parent="."]
unique_name_in_owner = true
modulate = Color( 0, 0.937255, 0.0823529, 1 )
anchor_left = 0.122727
anchor_top = 0.17
anchor_right = 0.836364
anchor_bottom = 0.37
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.2
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]Trait 1[/center]"
text = "Trait 1"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TraitDescriptionLabel" type="RichTextLabel" parent="."]
unique_name_in_owner = true
modulate = Color( 0, 0.937255, 0.0823529, 1 )
anchor_left = 0.118182
anchor_top = 0.38
anchor_right = 0.863636
anchor_bottom = 0.83
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "Trait Description"
text = "Trait Description"
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="pressed" from="." to="." method="_on_EthnicityTraitButton_pressed"]
